Fixed homepage features spacing on mobile and tablet displays (#113)

--- a/website/style/primitives/_Grid.scss
+++ b/website/style/primitives/_Grid.scss
@@ -94,6 +94,10 @@
 @include tablet {
   .Grid {
     display: grid;
+
+    .Item {
+      margin-bottom: 0;
+    }
   }
 
   .Hero {
